# CULPRIT_AINS

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  culprit-pitch.html  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
data/synthetic/: tickets.jsonl
docs/: DATA.md  PITCH.md
src/culprit/: __init__.py  __main__.py  config.py  run.py
src/culprit/agent/: __init__.py  graph.py  state.py
src/culprit/agent/nodes/: __init__.py  act.py  plan.py  retrieve.py  synthesize.py
src/culprit/agent/tools/: __init__.py  add_comment.py  search_tickets.py  set_priority.py  set_team.py
src/culprit/attribution/: __init__.py  counterfactual.py  crs.py  engine.py  selector.py
src/culprit/contracts/: __init__.py  loader.py  task_success.yaml
src/culprit/contracts/invariants/: ordering.yaml
src/culprit/contracts/rubrics/: planning.yaml  retrieval.yaml  synthesis.yaml  tool_execution.yaml
src/culprit/drift/: __init__.py  detector.py
src/culprit/evaluation/: __init__.py  confidence.py  debate.py  judge_runner.py
src/culprit/evaluation/judges/: __init__.py  backends.py  base.py  end_to_end.py  planning.py  retrieval.py  synthesis.py  tool_execution.py
src/culprit/evaluation/prompts/: debate.txt  end_to_end.txt  planning.txt  retrieval.txt  synthesis.txt  tool_execution.txt
src/culprit/meta_eval/: __init__.py  __main__.py  injector.py  mutation_engine.py  report.py  scorer.py
src/culprit/monitor/: __init__.py  alerts.py  compiler.py  state_machine.py
src/culprit/recorder/: __init__.py  callback.py  store.py  trajectory_builder.py
src/culprit/schemas/: __init__.py  attribution.py  evaluation.py  trajectory.py
src/culprit/tagger/: __init__.py  llm_fallback.py  rules.py
src/culprit/verdict/: __init__.py  renderer.py
src/culprit/verdict/templates/: fail.jinja2  pass.jinja2
tests/: conftest.py  test_run.py
tests/test_agent/: test_graph.py  test_tools.py
tests/test_attribution/: test_counterfactual.py  test_crs.py  test_engine.py  test_selector.py
tests/test_drift/: test_detector.py
tests/test_evaluation/: test_confidence.py  test_debate.py  test_judge_runner.py
tests/test_meta_eval/: test_injector.py  test_mutation_engine.py  test_scorer.py
tests/test_monitor/: test_compiler.py  test_state_machine.py
tests/test_recorder/: test_store.py  test_trajectory_builder.py
tests/test_tagger/: test_rules.py
tests/test_verdict/: test_renderer.py
tools/: gen_demo_data.py
ui/: .gitignore  app.py  dashboard.html  dashboard_data.js  dashboard_data.json  dashboard_soft.html  next.config.mjs  package-lock.json  package.json  styles.css
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: dag.py  drift_tab.py  meta_eval_tab.py  verdict_panel.py
ui/components/culprit/: badges.tsx  chart-tooltip.tsx  culprit-logo.tsx  dashboard.tsx  drift-view.tsx  hero.tsx  kpi-card.tsx  meta-view.tsx  overview-view.tsx  runs-view.tsx  sparkline.tsx  theme-toggle-wrapper.tsx  theme-toggle.tsx  trace-timeline.tsx
ui/components/ui/: card.tsx  splite.tsx  spotlight.tsx
ui/data/: culprit-data.json
ui/lib/: constants.ts  data.ts  theme-context.tsx  types.ts
